--- a/FabrikamFood/FabrikamFood.Droid/FabrikamFood.Droid.csproj
+++ b/FabrikamFood/FabrikamFood.Droid/FabrikamFood.Droid.csproj
@@ -209,6 +209,9 @@
       <Version>29.0.0.2</Version>
     </XamarinComponentReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\opening_hours.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
